--- a/index.html
+++ b/index.html
@@ -136,6 +136,15 @@
     //   progress.style.width = (((i - 1)/count) * 100) + '%';
     // }
   </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GVCX9TFPQY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GVCX9TFPQY');
+</script>
 </head>
 
 <body class="claro jimu-main-font">
